tests/errors/ref_return.milo
// @error: cannot return a reference
fn bad(x: &i32): &i32 {
    return x
}

fn main(): i32 {
    return 0
}
